Notes:
------
+ Added
- Deleted
x Correction
#number is the identifier of bug report/requested feature/patch
bug reports and feature request are here:
http://sourceforge.net/tracker/?group_id=86862

Version 0.7.5.9, 2008-02-
---------------
+ AVC: CABAC detection
x AVC: FPS were sometimes 2x the reality
x RealMedia parser was brocken
x FLV parser was crashing
x FLV: Better detection of Nellymoser audio
x Better false-positive MP3 detection (NSV files are no more detected as MP3)

Version 0.7.5.8, 2008-02-01
---------------
+ Matroska: Full parsing of DivX/XviD/H264/AVC settings (profile...)
+ AVI: Full parsing of AVC settings (profile...)
+ AVI: Added a tag "OpenDML" (for example, the PlayStation 3 doesn't support OpenDML files)
+ AVC: Framerate, Interlacement, writing library (only for eavc, x264 and MainConcept encoders)
+ TwinVQ : channels, bitrate and sampling rate
+ Musepack SV8 support
+ Musepack and Musepack SV8: tags support
+ AIFF and AIFC format support
+ MIDI format detection
+ FLV: FrameRate even if the tag is not in the header
+ AU/SND audio formats support
+ Vodei encrypted AVI files detection
+ Linux/MacOS: support of 2GiB+ files
+ FLV: Video parsing even if the container says there is no video
x APE Tags v1 are detected again
x MPEG-PS: some malformed files were not well parsed, fixed
x AVC: Cropping was not well handled (example: height was 1088 instead of 1080)

Version 0.7.5.7, 2008-01-09
---------------
+ SWF: Tags version 9 support
+ MPEG-TS: DegiCipher 2 (DCII) support
+ DVR-MS format support (with MPEG Audio or AC3)
+ WMV: language tag
+ MPEG-2 Video: Nominal bitrate
x AVI: some speed improvments

Version 0.7.5.6, 2007-12-10
---------------
+ AVI, Interlacement for M-JPEG codec
+ AVI, Interleaved tag
+ Better showing of well know values ("44.1 KHz", "22.05 KHz"...)
x AVI, was parsing the whole file in case of non-interleaved files
x MP3, was freezing on specific files